<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        
        <item
            android:id="@+id/habitsFragment"
            android:icon="@drawable/ic_habits"
            android:title="@string/nav_habits" />
        
        <item
            android:id="@+id/moodFragment"
            android:icon="@drawable/ic_mood"
            android:title="@string/nav_mood" />
        
        <item
            android:id="@+id/hydrationFragment"
            android:icon="@drawable/ic_water"
            android:title="@string/nav_hydration" />
        
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
        
</menu>
